--- a/nn-cuda/dataset/cleaning.ipynb
+++ b/nn-cuda/dataset/cleaning.ipynb
@@ -2,54 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rmse_mean                  1.280204\n",
+      "rmse_std                   0.193029\n",
+      "spectral_centroid_mean     0.148130\n",
+      "spectral_centroid_std     -0.918708\n",
+      "spectral_bandwidth_mean    0.399287\n",
+      "                             ...   \n",
+      "tonnetz6_std              -0.690576\n",
+      "chroma_cqt_mean           -1.533530\n",
+      "chroma_cqt_std             0.192809\n",
+      "spectral_contrast_mean    -0.711459\n",
+      "spectral_contrast_std     -0.227020\n",
+      "Name: 0, Length: 130, dtype: float64\n",
+      "rmse_mean                 -0.419098\n",
+      "rmse_std                  -0.958877\n",
+      "spectral_centroid_mean     0.788694\n",
+      "spectral_centroid_std     -0.227098\n",
+      "spectral_bandwidth_mean    0.920139\n",
+      "                             ...   \n",
+      "tonnetz6_std              -0.563680\n",
+      "chroma_cqt_mean            1.908725\n",
+      "chroma_cqt_std            -1.546972\n",
+      "spectral_contrast_mean    -1.268329\n",
+      "spectral_contrast_std      0.198919\n",
+      "Name: 0, Length: 130, dtype: float64\n",
       "   rmse_mean  rmse_std  spectral_centroid_mean  spectral_centroid_std  \\\n",
-      "0  -0.421358 -1.727188               -1.383174              -1.958137   \n",
-      "1   0.656922  0.206084               -0.554160               0.851850   \n",
-      "2  -0.884762  0.291790                0.463550               1.130857   \n",
-      "3   0.850675 -0.000297               -1.346648               0.849105   \n",
-      "4  -0.964743 -0.397042               -1.943950              -0.361052   \n",
+      "0   1.280204  0.193029                0.148130              -0.918708   \n",
+      "1  -0.692261  3.073387               -1.403619               1.967882   \n",
+      "2   1.225001 -0.862206                0.426080              -1.466851   \n",
+      "3   0.129845 -1.712893               -0.033665              -1.603754   \n",
+      "4  -0.583639  0.363490               -0.379050               2.158621   \n",
       "\n",
       "   spectral_bandwidth_mean  spectral_bandwidth_std  rolloff_mean  rolloff_std  \\\n",
-      "0                -1.398352               -1.459741     -1.567978    -1.617502   \n",
-      "1                 0.088505                1.582472     -0.328791     1.660876   \n",
-      "2                 0.345553                0.288469      0.398264     0.635532   \n",
-      "3                -1.016303                1.865452     -1.326038     1.611944   \n",
-      "4                -2.801442                0.649098     -2.147615    -0.097324   \n",
+      "0                 0.399287               -1.126301      0.337140    -0.898156   \n",
+      "1                -1.394868                2.671823     -1.491013     2.263363   \n",
+      "2                 0.650278               -1.340543      0.642889    -1.335493   \n",
+      "3                 0.193511               -0.809016      0.074869    -0.998738   \n",
+      "4                -0.240254                1.604616     -0.380849     1.869777   \n",
       "\n",
       "   zero_crossing_rate_mean  zero_crossing_rate_std  ...  tonnetz4_mean  \\\n",
-      "0                -0.687641               -1.356702  ...      -0.243108   \n",
-      "1                -0.870623               -0.567549  ...      -0.232657   \n",
-      "2                 0.763398                1.164596  ...      -1.063602   \n",
-      "3                -1.393551               -1.027076  ...       0.144860   \n",
-      "4                -0.998820               -0.650282  ...      -1.308012   \n",
+      "0                -0.454513                0.062160  ...       0.255284   \n",
+      "1                -0.964629                0.224453  ...       0.036426   \n",
+      "2                -0.259977               -0.445287  ...      -0.338514   \n",
+      "3                -0.256440               -1.170508  ...      -0.152929   \n",
+      "4                -0.436592                0.791291  ...       0.363472   \n",
       "\n",
       "   tonnetz4_std  tonnetz5_mean  tonnetz5_std  tonnetz6_mean  tonnetz6_std  \\\n",
-      "0     -0.589469       1.052295     -0.663608      -0.474608     -0.370902   \n",
-      "1     -0.920336      -0.464702     -1.160520      -0.508434     -0.973475   \n",
-      "2      1.101448      -2.431489      0.874731       0.125493      0.907754   \n",
-      "3     -1.211136      -0.107757     -1.131351      -0.152422     -1.195561   \n",
-      "4      1.632290      -5.474214      2.110403      -1.745836      0.948735   \n",
+      "0     -0.611671       0.377441     -0.726746      -0.114242     -0.690576   \n",
+      "1     -0.001352      -1.233992      1.744839       0.228774     -0.115759   \n",
+      "2      0.274657      -0.291135     -0.499777      -1.019228     -0.095353   \n",
+      "3     -0.553012       0.280315     -0.812567       0.501956     -0.677519   \n",
+      "4     -0.364242      -0.117560     -0.671799       0.215275     -0.580066   \n",
       "\n",
       "   chroma_cqt_mean  chroma_cqt_std  spectral_contrast_mean  \\\n",
-      "0         1.104052       -1.691570               -1.414757   \n",
-      "1         0.554210       -0.598164               -0.727135   \n",
-      "2         0.719940       -0.237560                0.295467   \n",
-      "3         0.583740       -1.174260               -0.885522   \n",
-      "4        -0.609022        1.864483                1.869449   \n",
+      "0        -1.533530        0.192809               -0.711459   \n",
+      "1         0.261661        1.587278                0.900272   \n",
+      "2        -0.955771       -0.325141               -0.695484   \n",
+      "3         1.077084       -1.797914               -1.193048   \n",
+      "4         0.378935       -0.458236               -0.289554   \n",
       "\n",
       "   spectral_contrast_std  \n",
-      "0               1.439354  \n",
-      "1               0.835681  \n",
-      "2               1.026858  \n",
-      "3               0.180473  \n",
-      "4              -2.111948  \n",
+      "0              -0.227020  \n",
+      "1              -1.301022  \n",
+      "2              -0.844307  \n",
+      "3               0.377291  \n",
+      "4               0.436985  \n",
+      "\n",
+      "[5 rows x 130 columns]\n",
+      "0    0\n",
+      "1    1\n",
+      "2    0\n",
+      "3    2\n",
+      "4    3\n",
+      "Name: label, dtype: int64\n",
+      "   rmse_mean  rmse_std  spectral_centroid_mean  spectral_centroid_std  \\\n",
+      "0  -0.419098 -0.958877                0.788694              -0.227098   \n",
+      "1  -0.581772  0.520922                0.294116               1.535038   \n",
+      "2  -0.775653  0.678761               -1.387481              -0.479674   \n",
+      "3   2.310746 -0.303129               -0.278683               0.234980   \n",
+      "4   0.721400  0.223276                1.702934              -0.035595   \n",
+      "\n",
+      "   spectral_bandwidth_mean  spectral_bandwidth_std  rolloff_mean  rolloff_std  \\\n",
+      "0                 0.920139               -1.138307      0.921102    -1.010488   \n",
+      "1                 0.460412                0.854541      0.327823     1.151360   \n",
+      "2                -1.396198                0.085776     -1.430621    -0.069159   \n",
+      "3                 0.152592                0.325802     -0.152374     0.614707   \n",
+      "4                 0.869592               -0.838455      1.280853    -0.855909   \n",
+      "\n",
+      "   zero_crossing_rate_mean  zero_crossing_rate_std  ...  tonnetz4_mean  \\\n",
+      "0                 0.294255                0.323279  ...      -0.261570   \n",
+      "1                 0.209914                0.777967  ...       0.454269   \n",
+      "2                -0.922305               -0.803989  ...      -3.953084   \n",
+      "3                -0.746023               -0.242908  ...      -0.963757   \n",
+      "4                 2.118393                1.178093  ...       0.526904   \n",
+      "\n",
+      "   tonnetz4_std  tonnetz5_mean  tonnetz5_std  tonnetz6_mean  tonnetz6_std  \\\n",
+      "0     -0.928327      -0.121871     -0.733117       0.273725     -0.563680   \n",
+      "1      1.422320       0.109829      1.887751      -0.585760      0.626999   \n",
+      "2      2.104247      -4.280862      1.509510       0.223981      0.644338   \n",
+      "3      2.045560       2.280034      0.927502      -0.650275      1.320433   \n",
+      "4      0.146472      -1.159647      0.702176       0.456955      0.197896   \n",
+      "\n",
+      "   chroma_cqt_mean  chroma_cqt_std  spectral_contrast_mean  \\\n",
+      "0         1.908725       -1.546972               -1.268329   \n",
+      "1        -0.821709        0.947470                0.345747   \n",
+      "2        -0.513510        1.754694                2.057966   \n",
+      "3        -1.142712        0.761189                0.622736   \n",
+      "4         0.362806        0.169593               -0.086266   \n",
+      "\n",
+      "   spectral_contrast_std  \n",
+      "0               0.198919  \n",
+      "1               0.389660  \n",
+      "2              -1.080518  \n",
+      "3               0.295459  \n",
+      "4              -0.016272  \n",
       "\n",
       "[5 rows x 130 columns]\n",
       "0    0\n",
@@ -57,55 +130,6 @@
       "2    2\n",
       "3    3\n",
       "4    4\n",
-      "Name: label, dtype: int64\n",
-      "   rmse_mean  rmse_std  spectral_centroid_mean  spectral_centroid_std  \\\n",
-      "0   0.551835 -0.147120                0.131044              -0.826519   \n",
-      "1  -0.563390 -1.345450                1.002891              -0.742417   \n",
-      "2   0.496144  0.273131                0.839827               1.205556   \n",
-      "3   0.170721  0.290045                0.571022              -1.238800   \n",
-      "4   0.282419  1.255941                0.575393               1.236895   \n",
-      "\n",
-      "   spectral_bandwidth_mean  spectral_bandwidth_std  rolloff_mean  rolloff_std  \\\n",
-      "0                 0.350537               -0.761074      0.303701    -0.573022   \n",
-      "1                 0.572102               -1.002691      0.802243    -0.819016   \n",
-      "2                 0.796600               -0.124889      0.855815    -0.245687   \n",
-      "3                 0.770375               -1.347438      0.799274    -1.334666   \n",
-      "4                 0.401411                0.023470      0.493990     0.546565   \n",
-      "\n",
-      "   zero_crossing_rate_mean  zero_crossing_rate_std  ...  tonnetz4_mean  \\\n",
-      "0                -0.283366               -0.517252  ...      -0.445741   \n",
-      "1                 1.405591               -0.177310  ...      -1.908224   \n",
-      "2                 0.678695                3.081353  ...      -0.628891   \n",
-      "3                -0.234149               -0.441303  ...       0.366227   \n",
-      "4                 0.262230                1.203416  ...      -1.318265   \n",
-      "\n",
-      "   tonnetz4_std  tonnetz5_mean  tonnetz5_std  tonnetz6_mean  tonnetz6_std  \\\n",
-      "0     -0.925984      -0.036017     -0.806178      -0.367353     -0.903787   \n",
-      "1      0.168005      -1.919748      0.086678      -1.352068     -0.365477   \n",
-      "2     -0.269723      -0.113159     -0.252264       0.034151     -0.037286   \n",
-      "3     -0.834850       0.370402     -0.879218       0.410610     -0.882980   \n",
-      "4      0.486951       0.090163      0.721904       0.295770      0.821250   \n",
-      "\n",
-      "   chroma_cqt_mean  chroma_cqt_std  spectral_contrast_mean  \\\n",
-      "0         0.207543       -1.419192               -0.639045   \n",
-      "1        -0.800003        0.824180                0.493991   \n",
-      "2        -0.981732        0.102635                0.728798   \n",
-      "3         0.515753       -0.955087               -0.891738   \n",
-      "4        -1.070776        0.697380                1.003570   \n",
-      "\n",
-      "   spectral_contrast_std  \n",
-      "0               0.303235  \n",
-      "1              -0.253015  \n",
-      "2               0.946940  \n",
-      "3               0.072379  \n",
-      "4              -0.312187  \n",
-      "\n",
-      "[5 rows x 130 columns]\n",
-      "0    0\n",
-      "1    1\n",
-      "2    2\n",
-      "3    0\n",
-      "4    2\n",
       "Name: label, dtype: int64\n"
      ]
     }
@@ -138,7 +162,7 @@
     "\n",
     "    # Normalize the feature data\n",
     "    x = (x - x.mean()) / x.std()\n",
-    "\n",
+    "    print(x.iloc[0])\n",
     "    # Ordinal encoding for the label\n",
     "    unique_labels = y.unique()\n",
     "    label_dict = {unique_labels[i]: i for i in range(len(unique_labels))}\n",
@@ -158,10 +182,10 @@
     "print(x_test.head())\n",
     "print(y_test.head())\n",
     "# save as npy files\n",
-    "x_train = x_train.to_numpy().astype(np.float32)\n",
-    "y_train = y_train.to_numpy().astype(np.uint)\n",
-    "x_test = x_test.to_numpy().astype(np.float32)\n",
-    "y_test = y_test.to_numpy().astype(np.uint)\n",
+    "x_train = x_train.to_numpy().astype(np.float32, order='C')\n",
+    "y_train = y_train.to_numpy().astype(np.uint, order='C')\n",
+    "x_test = x_test.to_numpy().astype(np.float32, order='C')\n",
+    "y_test = y_test.to_numpy().astype(np.uint, order='C')\n",
     "\n",
     "np.save('x_train.npy', x_train)\n",
     "np.save('y_train.npy', y_train)\n",
@@ -171,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -179,32 +203,32 @@
      "output_type": "stream",
      "text": [
       "(32000, 130)\n",
-      "[-0.67169785 -1.4710041  -1.6788975  -1.8285253  -2.0823963  -1.2661979\n",
-      " -1.8117235  -1.6022962  -0.7763812  -1.345163   -0.3725419  -1.7207499\n",
-      "  2.2961347  -1.3953819  -1.8297907  -1.5376248   0.5815921  -1.4731673\n",
-      " -0.05173915 -1.4999644   0.6055949  -1.5274329  -0.8847783  -1.2293793\n",
-      " -0.7630958  -1.4053953  -0.88005    -1.0974672  -0.73397076 -1.2898788\n",
-      " -0.9087216  -1.3460696  -0.49065322 -1.3329337  -0.69800794 -1.3977901\n",
-      " -0.70201427 -1.3737736  -1.1017649  -1.0943662  -0.77564496 -1.2481341\n",
-      " -0.950419   -1.4649851  -0.858817   -1.3345835  -1.0477504  -1.6132873\n",
-      " -1.3276291  -1.3775139  -1.532309   -1.4446559  -1.3301272  -0.95007473\n",
-      " -1.3632712  -1.4945269  -0.68381345 -0.76761985  0.22931328 -1.3598671\n",
-      "  0.11492222 -1.0210652  -1.3722152  -1.2689304  -1.7484659  -1.3355434\n",
-      " -1.2843469  -0.88452727 -0.8303076  -1.3207625   0.07581349 -0.9651243\n",
-      "  1.356685   -1.0048246   1.0659204  -0.97540593 -1.5958729  -0.8826844\n",
-      " -2.6410246  -1.1602156  -0.8873808  -1.0441631  -0.09226359 -1.1577413\n",
-      " -2.1970208  -0.9609968  -2.930356   -1.2265204  -1.212527   -1.2641169\n",
-      "  1.1996168  -0.97357476  2.6340024  -1.1356617   1.1333255  -1.6862432\n",
-      "  1.9911767  -0.81053513 -0.6461675  -2.024782   -1.3288342  -1.463792\n",
-      " -1.9119784  -2.6267767  -0.94506985 -1.4985603   0.49255353 -0.20239386\n",
-      " -1.1274484  -2.2507894  -0.0379536   0.238969   -0.32936364 -1.596566\n",
-      " -1.9613024  -0.6556671  -0.15092991 -0.5578001   0.2666768  -0.5599612\n",
-      "  0.7599874  -0.53382725  0.5863977  -0.51450354 -0.22088137 -0.6030899\n",
-      " -0.9383421   0.9469274   1.0430648   0.65586144]\n",
+      "[ 1.2802037   0.1930291   0.14813042 -0.9187077   0.39928705 -1.1263012\n",
+      "  0.3371404  -0.8981565  -0.45451304  0.0621605   1.0560607  -1.3348378\n",
+      " -0.0733905  -1.044068   -0.19040577 -1.309372   -0.5134216  -0.8083802\n",
+      " -0.9226823  -0.82346004 -0.630479   -0.8292406  -0.30959445 -0.6063041\n",
+      "  0.47326967 -1.1096132   0.93647605 -1.3001195   1.1064268  -0.97503984\n",
+      "  0.99309564 -0.4860793   0.75378454 -0.3216847   0.3706675  -0.6359648\n",
+      "  0.44073683 -0.95372987  0.02045424 -1.0794158   0.15339833 -1.1014866\n",
+      "  0.10339521 -1.010531    0.25264156 -0.9992745   0.01791598 -0.4988723\n",
+      "  0.47676328 -0.42679846  0.46276245 -0.16447748  0.47393793 -0.5530521\n",
+      "  0.57042205 -0.43238965  0.198013   -0.4687996  -0.10174983 -0.5659673\n",
+      "  0.04667875 -0.5686789   0.12115318 -0.81296015  0.39833286 -0.2668084\n",
+      "  0.5142624  -0.7741534   0.30212298 -0.25643107  0.5739981  -0.5504623\n",
+      "  0.9862857  -0.1276196   0.9586745  -0.5532855   0.33066446 -0.7535795\n",
+      " -0.4247169  -1.0487133  -0.3856089  -1.069695   -0.27382615 -0.47790456\n",
+      " -0.12411349 -0.23853706  0.32118928 -0.21791959  0.15869905 -0.7005257\n",
+      "  0.2759716  -0.19725773 -0.23807651 -1.248589   -0.84960705 -1.384387\n",
+      " -0.57556224  0.46672824  0.17792276  1.1188298   0.26198274  0.44864434\n",
+      " -0.42049652 -1.2030116  -0.05810964 -0.7015203   0.6622668   0.17826311\n",
+      "  1.5553112   0.25191063  1.5763041   0.00297388  0.51400244 -0.14968969\n",
+      " -0.01851577 -0.8955256   0.301095   -0.62079763 -0.71004975 -0.58484447\n",
+      "  0.25528362 -0.6116711   0.37744078 -0.72674614 -0.11424235 -0.6905758\n",
+      " -1.5335304   0.19280852 -0.7114589  -0.22702026]\n",
       "float32\n",
       "(32000,)\n",
       "0\n",
-      "uint8\n"
+      "uint32\n"
      ]
     }
    ],
