--- a/nn-cuda/python-codes/cross_entropy.ipynb
+++ b/nn-cuda/python-codes/cross_entropy.ipynb
@@ -65,29 +65,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[7.3754084e-01 3.7342447e-01 9.5367289e-01 ... 5.4902799e-02\n",
-      "  8.1377608e-01 4.7416610e-01]\n",
-      " [7.8127384e-02 8.2253486e-01 4.8448133e-01 ... 8.9083529e-01\n",
-      "  6.8590349e-01 5.9517199e-01]\n",
-      " [8.7215799e-01 8.6217839e-01 4.2280343e-01 ... 8.0529189e-01\n",
-      "  1.6940825e-01 2.4695578e-01]\n",
-      " ...\n",
-      " [7.9311504e+00 8.1496626e-01 1.0159612e-01 ... 7.3689991e-01\n",
-      "  9.6874905e-01 9.7122103e-01]\n",
-      " [7.9042939e-03 8.5082555e-01 7.0662558e-01 ... 4.6308786e-01\n",
-      "  7.9729605e-01 2.4710837e-01]\n",
-      " [5.4576248e-01 1.8927580e-01 6.8874174e-01 ... 6.7033905e-01\n",
-      "  1.4654988e+00 9.1537219e-01]]\n",
-      "[2.9195728  1.2787329  0.11892429 0.10178272 0.86642134]\n",
-      "tensor([2.9196, 1.2787, 0.1189, 0.1018, 0.8664])\n",
-      "True\n"
+      "[[0.0011597  0.23557237 0.6481521 ]\n",
+      " [0.07437361 0.2702414  0.36002687]\n",
+      " [0.25528732 0.98529005 0.31891844]]\n",
+      "soft torch inp tensor([[0.0013, 0.2662, 0.7325],\n",
+      "        [0.1055, 0.3835, 0.5109],\n",
+      "        [0.1637, 0.6318, 0.2045]])\n",
+      "log torch inp tensor([[-6.6373, -1.3234, -0.3113],\n",
+      "        [-2.2486, -0.9584, -0.6715],\n",
+      "        [-1.8097, -0.4592, -1.5872]])\n",
+      "torch losses tensor([6.6373, 2.2486, 1.5872])\n",
+      "h_losses [1.428864  1.2661014 1.3572543]\n",
+      "H_sofqmax [[-1.428864   -1.1944513  -0.78187156]\n",
+      " [-1.2661014  -1.0702336  -0.98044807]\n",
+      " [-1.4208856  -0.69088274 -1.3572543 ]]\n"
      ]
     }
    ],
@@ -97,18 +95,33 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "inp = np.load('../with-torch-tests/cross-entropy-layer/h_predictions.npy')\n",
-    "target = np.load('../with-torch-tests/cross-entropy-layer/h_targets.npy')\n",
+    "inp = np.load('../with-torch-tests/cross-entropy-layer/h_inp.npy')\n",
+    "print(inp)\n",
+    "target = np.load('../with-torch-tests/cross-entropy-layer/h_targets.npy').astype(np.int64)\n",
     "h_losses = np.load('../with-torch-tests/cross-entropy-layer/h_losses.npy')\n",
+    "h_softmax = np.load('../with-torch-tests/cross-entropy-layer/h_softmaxed.npy')\n",
     "inp_torch = torch.from_numpy(inp).to(torch.float32)\n",
     "inp_torch = torch.log(inp_torch)\n",
     "target_torch = torch.from_numpy(target).to(torch.int64)\n",
-    "loss = nn.NLLLoss(reduction='none')\n",
-    "out_torch = loss(inp_torch, target_torch)\n",
     "\n",
-    "print(h_losses[0:5])\n",
-    "print(out_torch[0:5])\n",
-    "print(np.allclose(h_losses, out_torch.detach().numpy(), atol=1e-4, rtol=1e-4))"
+    "#apply softmax\n",
+    "m = nn.Softmax(dim=1)\n",
+    "inp_torch_1 = m(inp_torch)\n",
+    "print(\"soft torch inp\",inp_torch_1)\n",
+    "\n",
+    "#apply log softmax\n",
+    "m = nn.LogSoftmax(dim=1)\n",
+    "inp_torch_2 = m(inp_torch)\n",
+    "print(\"log torch inp\",inp_torch_2)\n",
+    "\n",
+    "#apply NLLLoss\n",
+    "loss = nn.NLLLoss(reduction='none')\n",
+    "losses = loss(inp_torch_2, target_torch)\n",
+    "print(\"torch losses\", losses)\n",
+    "\n",
+    "#compare\n",
+    "print(\"h_losses\", h_losses)\n",
+    "print(\"H_sofqmax\", h_softmax)"
    ]
   }
  ],
