cpu and torch benchmarking

--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -329,14 +329,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.78198105 0.4786313  0.7654065  0.05289226 0.815995  ]\n",
+      "[0.78198105 0.4786313  0.7654065  0.05289226 0.815995  ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Python312\\Lib\\site-packages\\transformers\\utils\\generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch: 0, Batch: 0, Loss: 92.91064453125\n",
       "Epoch: 0, Batch: 1, Loss: 70.51587677001953\n",
       "Epoch: 0, Batch: 2, Loss: 89.21380615234375\n",
@@ -10347,6 +10361,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
+    "import torch.autograd.profiler as profiler\n",
     "\n",
     "class ParamsDownloader:\n",
     "    def __init__(self, data_path):\n",
@@ -10405,14 +10420,11 @@
     "        optimizer.step()\n",
     "        print(f\"Epoch: {epoch}, Batch: {i}, Loss: {loss.item()}\")\n",
     "\n",
-    "\n",
     "x_test = np.load('../dataset/x_test.npy')\n",
     "y_test = np.load('../dataset/y_test.npy')\n",
     "y1, y1_relu, y2 = model(torch.from_numpy(x_test).float())\n",
     "y_pred = y2.argmax(dim=1).numpy()\n",
     "accuracy = (y_pred == y_test).mean()\n",
-    "\n",
-    "\n",
     "print(f\"Accuracy: {accuracy}\")"
    ]
   },
@@ -10773,7 +10785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
