--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -161,39 +161,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\aatta\\anaconda3\\lib\\site-packages\\transformers\\utils\\generic.py:485: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "c:\\Python312\\Lib\\site-packages\\transformers\\utils\\generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
       "  _torch_pytree._register_pytree_node(\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loss  3065.73193359375\n",
-      "Forward\n",
-      "False\n",
-      "False\n",
-      "True\n",
-      "Back\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "Updated weights\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
+     "ename": "AttributeError",
+     "evalue": "'DataLoaderModule' object has no attribute 'X_c'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 127\u001b[0m\n\u001b[0;32m    124\u001b[0m     trainer\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[0;32m    126\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 127\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[4], line 124\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    121\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mSGD(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m)\n\u001b[0;32m    123\u001b[0m trainer \u001b[38;5;241m=\u001b[39m Trainer(model, data_loader, criterion, optimizer)\n\u001b[1;32m--> 124\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[4], line 68\u001b[0m, in \u001b[0;36mTrainer.train\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtrain\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 68\u001b[0m     X \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_loader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mX_c\u001b[49m)\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mrequires_grad_(\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     69\u001b[0m     target \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata_loader\u001b[38;5;241m.\u001b[39mtarget)\u001b[38;5;241m.\u001b[39mlong()\n\u001b[0;32m     71\u001b[0m     y1, y1_relu, y2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel(X)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataLoaderModule' object has no attribute 'X_c'"
      ]
     }
    ],
@@ -212,13 +201,13 @@
     "        self.load_data()\n",
     "\n",
     "    def load_data(self):\n",
-    "        self.a1 = np.load(f'{self.data_path}/a1.npy')\n",
-    "        self.da1 = np.load(f'{self.data_path}/da1.npy')\n",
-    "        self.dln1 = np.load(f'{self.data_path}/dln1.npy')\n",
-    "        self.dln2 = np.load(f'{self.data_path}/dln2.npy')\n",
-    "        self.dsm = np.load(f'{self.data_path}/dsm.npy')\n",
-    "        self.ln1 = np.load(f'{self.data_path}/ln1.npy')\n",
-    "        self.ln1b_grad = np.load(f'{self.data_path}/ln1b_grad.npy')\n",
+    "        # self.a1 = np.load(f'{self.data_path}/a1.npy')\n",
+    "        # self.da1 = np.load(f'{self.data_path}/da1.npy')\n",
+    "        # self.dln1 = np.load(f'{self.data_path}/dln1.npy')\n",
+    "        # self.dln2 = np.load(f'{self.data_path}/dln2.npy')\n",
+    "        # self.dsm = np.load(f'{self.data_path}/dsm.npy')\n",
+    "        # self.ln1 = np.load(f'{self.data_path}/ln1.npy')\n",
+    "        # self.ln1b_grad = np.load(f'{self.data_path}/ln1b_grad.npy')\n",
     "        self.ln1b = np.load(f'{self.data_path}/ln1b.npy')\n",
     "        self.ln1w_grad = np.load(f'{self.data_path}/ln1w_grad.npy')\n",
     "        self.ln1w = np.load(f'{self.data_path}/ln1w.npy')\n",
@@ -313,11 +302,11 @@
     "        print(np.allclose(self.model.l2.weight.detach().numpy(), self.data_loader.updated_ln2w, atol=1e-4))\n",
     "        print(np.allclose(self.model.l2.bias.detach().numpy(), self.data_loader.updated_ln2b, atol=1e-4))\n",
     "def main():\n",
-    "    data_loader = DataLoaderModule('../with-torch-tests/trained-model-cpu')\n",
+    "    data_loader = DataLoaderModule('../with-torch-tests/trained-model')\n",
     "    \n",
     "    model = Model(data_loader.ln1w, data_loader.ln1b, data_loader.ln2w, data_loader.ln2b)\n",
     "    \n",
-    "    criterion = nn.CrossEntropyLoss(reduction='sum')\n",
+    "    criterion = nn.CrossEntropyLoss(reduction='mean')\n",
     "    optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
     "     \n",
     "    trainer = Trainer(model, data_loader, criterion, optimizer)\n",
