--- a/nn-cuda/python-codes/final.ipynb
+++ b/nn-cuda/python-codes/final.ipynb
@@ -381,6 +381,148 @@
     "accuracy = (y_pred == y_test).mean()\n",
     "print(f\"Accuracy: {accuracy}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "SOFTMAX\n",
+      "----------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "                  Name    Self CPU %      Self CPU   CPU total %     CPU total  CPU time avg     Self CUDA   Self CUDA %    CUDA total  CUDA time avg    # of Calls  \n",
+      "----------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "     aten::log_softmax         4.88%       1.955ms       100.00%      40.026ms     400.260us     590.000us         0.07%     822.587ms       8.226ms           100  \n",
+      "    aten::_log_softmax        95.12%      38.071ms        95.12%      38.071ms     380.710us     821.997ms        99.93%     821.997ms       8.220ms           100  \n",
+      "----------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "Self CPU time total: 40.026ms\n",
+      "Self CUDA time total: 822.587ms\n",
+      "\n",
+      "NLLLoss\n",
+      "--------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "                      Name    Self CPU %      Self CPU   CPU total %     CPU total  CPU time avg     Self CUDA   Self CUDA %    CUDA total  CUDA time avg    # of Calls  \n",
+      "--------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "         aten::log_softmax        84.03%     182.821ms        85.13%     185.215ms       1.852ms     379.000us         0.05%     779.067ms       7.791ms           100  \n",
+      "        aten::_log_softmax         1.10%       2.394ms         1.10%       2.394ms      23.940us     778.688ms        96.31%     778.688ms       7.787ms           100  \n",
+      "         aten::nll_loss_nd         0.71%       1.539ms        14.87%      32.350ms     323.500us     344.000us         0.04%      29.497ms     294.970us           100  \n",
+      "            aten::nll_loss         0.87%       1.897ms        14.16%      30.811ms     308.110us     425.000us         0.05%      29.153ms     291.530us           100  \n",
+      "    aten::nll_loss_forward        13.28%      28.888ms        13.29%      28.914ms     289.140us      28.569ms         3.53%      28.728ms     287.280us           100  \n",
+      "             aten::resize_         0.01%      26.000us         0.01%      26.000us       0.260us     159.000us         0.02%     159.000us       1.590us           100  \n",
+      "--------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "Self CPU time total: 217.565ms\n",
+      "Self CUDA time total: 808.564ms\n",
+      "\n",
+      "CrossEntropyLoss\n",
+      "----------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "                        Name    Self CPU %      Self CPU   CPU total %     CPU total  CPU time avg     Self CUDA   Self CUDA %    CUDA total  CUDA time avg    # of Calls  \n",
+      "----------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "    aten::cross_entropy_loss        27.80%       4.213ms       100.00%      15.156ms     151.560us     702.000us         0.09%     805.285ms       8.053ms           100  \n",
+      "           aten::log_softmax        17.76%       2.691ms        35.10%       5.320ms      53.200us     532.000us         0.07%     779.456ms       7.795ms           100  \n",
+      "          aten::_log_softmax        16.96%       2.571ms        16.96%       2.571ms      25.710us     778.737ms        96.70%     778.737ms       7.787ms           100  \n",
+      "           aten::nll_loss_nd         9.03%       1.369ms        37.10%       5.623ms      56.230us     327.000us         0.04%      25.127ms     251.270us           100  \n",
+      "              aten::nll_loss         8.33%       1.262ms        28.07%       4.254ms      42.540us     370.000us         0.05%      24.800ms     248.000us           100  \n",
+      "      aten::nll_loss_forward        19.40%       2.940ms        19.74%       2.992ms      29.920us      24.267ms         3.01%      24.430ms     244.300us           100  \n",
+      "                    aten::to         0.38%      58.000us         0.38%      58.000us       0.580us     187.000us         0.02%     187.000us       1.870us           100  \n",
+      "               aten::resize_         0.34%      52.000us         0.34%      52.000us       0.520us     163.000us         0.02%     163.000us       1.630us           100  \n",
+      "----------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "Self CPU time total: 15.156ms\n",
+      "Self CUDA time total: 805.285ms\n",
+      "\n",
+      "Linear\n",
+      "--------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "                Name    Self CPU %      Self CPU   CPU total %     CPU total  CPU time avg     Self CUDA   Self CUDA %    CUDA total  CUDA time avg    # of Calls  \n",
+      "--------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "        aten::linear         1.00%       2.561ms       100.00%     257.090ms       2.571ms     587.000us         0.11%     541.927ms       5.419ms           100  \n",
+      "         aten::addmm        36.50%      93.839ms        97.83%     251.521ms       2.515ms     532.061ms        98.18%     540.367ms       5.404ms           100  \n",
+      "        aten::expand        61.32%     157.650ms        61.33%     157.682ms       1.577ms       7.719ms         1.42%       8.306ms      83.060us           100  \n",
+      "             aten::t         0.60%       1.540ms         1.17%       3.008ms      30.080us     433.000us         0.08%     973.000us       9.730us           100  \n",
+      "    aten::as_strided         0.05%     131.000us         0.05%     131.000us       0.655us     769.000us         0.14%     769.000us       3.845us           200  \n",
+      "     aten::transpose         0.53%       1.369ms         0.57%       1.468ms      14.680us     358.000us         0.07%     540.000us       5.400us           100  \n",
+      "--------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "Self CPU time total: 257.090ms\n",
+      "Self CUDA time total: 541.927ms\n",
+      "\n",
+      "ReLU\n",
+      "-------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "               Name    Self CPU %      Self CPU   CPU total %     CPU total  CPU time avg     Self CUDA   Self CUDA %    CUDA total  CUDA time avg    # of Calls  \n",
+      "-------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "         aten::relu        15.25%       3.418ms       100.00%      22.414ms     224.140us       1.904ms         0.42%     455.096ms       4.551ms           100  \n",
+      "    aten::clamp_min        84.75%      18.996ms        84.75%      18.996ms     189.960us     453.192ms        99.58%     453.192ms       4.532ms           100  \n",
+      "-------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
+      "Self CPU time total: 22.414ms\n",
+      "Self CUDA time total: 455.096ms\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "import torch.autograd.profiler as profiler\n",
+    "\n",
+    "# test kernels speed \n",
+    "repeats = 100\n",
+    "\n",
+    "# Set the device to GPU if available\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
+    "# softmax \n",
+    "x = torch.randn(10000, 10000).to(device)\n",
+    "with profiler.profile(record_shapes=True, use_cuda=True) as prof:\n",
+    "    for _ in range(repeats):\n",
+    "        y = F.log_softmax(x, dim=1)\n",
+    "print(\"SOFTMAX\")\n",
+    "print(prof.key_averages().table(sort_by=\"cuda_time_total\", row_limit=10))\n",
+    "\n",
+    "\n",
+    "# NLLLoss\n",
+    "x = torch.randn(10000, 10000).to(device)\n",
+    "y = torch.randint(0, 10000, (10000,)).to(device)\n",
+    "criterion = nn.NLLLoss()\n",
+    "with profiler.profile(record_shapes=True, use_cuda=True) as prof:\n",
+    "    for _ in range(repeats):\n",
+    "        loss = criterion(F.log_softmax(x, dim=1), y)\n",
+    "print(\"NLLLoss\")\n",
+    "print(prof.key_averages().table(sort_by=\"cuda_time_total\", row_limit=10))\n",
+    "\n",
+    "\n",
+    "# cross entropy\n",
+    "x = torch.randn(10000, 10000).to(device)\n",
+    "y = torch.randint(0, 10000, (10000,)).to(device)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "with profiler.profile(record_shapes=True, use_cuda=True) as prof:\n",
+    "    for _ in range(repeats):\n",
+    "        loss = criterion(x, y)\n",
+    "print(\"CrossEntropyLoss\")\n",
+    "print(prof.key_averages().table(sort_by=\"cuda_time_total\", row_limit=10))\n",
+    "\n",
+    "\n",
+    "# Linear layer\n",
+    "x = torch.randn(2048, 2048).to(device)\n",
+    "linear = nn.Linear(2048, 2048).to(device)\n",
+    "with profiler.profile(record_shapes=True, use_cuda=True) as prof:\n",
+    "    for _ in range(repeats):\n",
+    "        y = linear(x)\n",
+    "print(\"Linear\")\n",
+    "print(prof.key_averages().table(sort_by=\"cuda_time_total\", row_limit=10))\n",
+    "\n",
+    "\n",
+    "# relu \n",
+    "x = torch.randn(10000, 10000).to(device)\n",
+    "with profiler.profile(record_shapes=True, use_cuda=True) as prof:\n",
+    "    for _ in range(repeats):\n",
+    "        y = F.relu(x)\n",
+    "print(\"ReLU\")\n",
+    "print(prof.key_averages().table(sort_by=\"cuda_time_total\", row_limit=10))"
+   ]
   }
  ],
  "metadata": {
